More work on server auto registration. Expanding on endpoints
